@@ -1,5 +1,1 @@
-AUX qcdemu-mimelnk.patch 511 RMD160 e69969c8a8bb07cee6aec9935af11c8dd13fcfdf SHA1 fab1cbd498c87f8260bfd43f9f530fa9792f059b SHA256 3e01b4f0d384e2e905ba3b343f7213ef270c43dd00943839a44dc30d5a294357
 DIST qcdemu-0.2.4.tar.gz 25442 RMD160 db312cb721f6083dd21a07e3568510549e540b96 SHA1 8dcff56410988596d1336c28f85718230be572ef SHA256 10df3eab65e6fd0f84db803077b0d104d73517556bb00e69d1595ce7f96723b1
-EBUILD qcdemu-0.2.4.ebuild 583 RMD160 752d163321b9c7ee6b4eceb8712383d9bb03514f SHA1 e5d00e9eac1f9a19bd40c6027f70d04118e1022a SHA256 5f64d7eb5ed8b27d6fc3aa5ac52be5d218ab10d4bd7acf3c8fef9999bc291157
-MISC ChangeLog 2146 RMD160 5dfc7052846e7bf9ae0456bf6595e5e2eb0decb1 SHA1 e73a6230b7603a5d3ade1943ee4a97238298d9f3 SHA256 f280a9b616e0e7ace0f69e2268c69af04032dfbf502fd183b9dc835743c698b6
-MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
